@@ -1,0 +1,17 @@
+<!-- Page Content -->
+<div class="container">
+
+    <div class="row">
+        <div class="col-lg-12 text-center">
+            <h1>A Bootstrap Starter Template</h1>
+            <p class="lead">A Bootstrap HTML starter template from <a href="http://startbootstrap.com/">startbootstrap.com</a>.</p>
+            <ul class="list-unstyled">
+                <li>Bootstrap</li>
+                <li>jQuery</li>
+            </ul>
+        </div>
+    </div>
+    <!-- /.row -->
+
+</div>
+<!-- /.container -->
