@@ -1,3 +1,3 @@
 module RailsAppsPages
-  VERSION = "0.5.16"
+  VERSION = "0.6.0"
 end
